--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "typings": "build/declarations/index.d.ts",
   "scripts": {
     "clean": "rimraf build",
-    "start": "webpack-dev-server --mode development",
+    "start": "npm run clean && webpack --mode development --watch",
     "dev": "npm run clean && webpack --mode development",
     "build": "npm run clean && webpack --mode production"
   },
@@ -28,6 +28,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
+    "circular-dependency-plugin": "^4.4.0",
     "eslint": "^4.18.1",
     "eslint-config-happiness": "^10.2.1",
     "eslint-plugin-import": "^2.9.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "install": "^0.10.4",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "ts-loader": "^4.0.0",
