--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "typings": "build/declarations/index.d.ts",
   "scripts": {
     "clean": "rimraf build",
-    "start": "npm run clean && webpack --mode development --watch",
+    "start": "webpack --mode development --watch",
     "dev": "npm run clean && webpack --mode development",
     "build": "npm run clean && webpack --mode production"
   },
@@ -29,7 +29,7 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "circular-dependency-plugin": "^4.4.0",
-    "eslint": "^4.18.1",
+    "eslint": "^4.18.2",
     "eslint-config-happiness": "^10.2.1",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
@@ -39,12 +39,12 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "ts-loader": "^4.0.0",
+    "ts-loader": "^4.0.1",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2",
-    "webpack": "^4.0.1",
+    "webpack": "^4.1.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.9",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0",
     "worker-loader": "^1.1.1"
   }
