chore(gitignore): remove vscode settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-/build
-/test
-node_modules
-yarn-error.log
-docs/.marking_your_own_pointcloud_loader.md.html
-docs/.file_format.md.html
-docs/.doc.md.html
-docs/.how_does_loading_nodes_work.md.html
-docs/.materials_and_rendermodes.md.html
-docs/.how_to_create_your_own_pointcloud_loader.md.html
-examples/index.html
 .project
+.vscode/
+/build
+/pointclouds/alszeile
 /pointclouds/D
 /pointclouds/wrneustadt
-/pointclouds/alszeile
+/test
+docs/.doc.md.html
+docs/.file_format.md.html
+docs/.how_does_loading_nodes_work.md.html
+docs/.how_to_create_your_own_pointcloud_loader.md.html
+docs/.marking_your_own_pointcloud_loader.md.html
+docs/.materials_and_rendermodes.md.html
+examples/index.html
+node_modules
+yarn-error.log
