--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "description": "WebGL point cloud viewer",
   "main": "build/potree.js",
   "typings": "build/declarations/index.d.ts",
+  "side-effects": false,
   "scripts": {
     "clean": "rimraf build",
-    "start": "webpack --mode development --watch",
-    "dev": "npm run clean && webpack --mode development",
-    "build": "npm run clean && webpack --mode production"
+    "start": "webpack --mode development --watch --progress",
+    "dev": "npm run clean && webpack --mode development --progress",
+    "build": "npm run clean && webpack --mode production --progress --config webpack.config.prod.js"
   },
   "dependencies": {
     "@types/three": "^0.89.11",
     "process-nextick-args": "^2.0.0",
-    "rxjs": "^5.5.6",
     "safe-buffer": "^5.1.1",
     "three": "^0.90.0",
     "util-deprecate": "^1.0.2"
@@ -26,7 +26,7 @@
     "@babel/preset-env": "^7.0.0-beta.40",
     "@types/node": "^9.4.6",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "circular-dependency-plugin": "^4.4.0",
     "eslint": "^4.18.2",
@@ -36,7 +36,6 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "install": "^0.10.4",
-    "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "ts-loader": "^4.0.1",
